create: sample of template inheritance + style

--- a/jardiquest/view/test.html
+++ b/jardiquest/view/test.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
+{% extends "base.html" %}
+{% block content %}
     <title>Test</title>
-    <link rel="stylesheet" href="/static/theme.css">
-</head>
-<body>
-    Hello World
+
+    <h2>Hello World</h2>
     <br> If you see that, it's mean all the links are good
     <br> Test for the database link (maybe not working because data in it don't exist
     <ul>
@@ -14,5 +10,4 @@
         <li>{{data}}</li>
         {% endfor %}
     </ul>
-</body>
-</html>
+{% endblock %}
