config: SQLAlchemy Flask_login

--- a/jardiquest/view/home.html
+++ b/jardiquest/view/home.html
@@ -1,13 +1,9 @@
 {% extends "base.html" %}
 {% block content %}
-    <title>Test</title>
+    <title>Accueil</title>
 
     <h2>Hello World</h2>
     <br> If you see that, it's mean all the links are good
     <br> Test for the database link (maybe not working because data in it don't exist
-    <ul>
-        {% for data in datas %}
-        <li>{{data}}</li>
-        {% endfor %}
-    </ul>
+
 {% endblock %}
