auth: redirect user connected or not

--- a/jardiquest/view/signup.html
+++ b/jardiquest/view/signup.html
@@ -1,4 +1,4 @@
-{% extends "base.html" %}
+{% extends "_base.html" %}
 {% block content %}
 <title>Inscrivez-vous</title>
 {% with messages = get_flashed_messages() %}
