--- a/jardiquest/static/css/base.css
+++ b/jardiquest/static/css/base.css
@@ -5,9 +5,46 @@
     --yellow-white: #E3CD8B;
     --brown-orange: #C18845;
     --taupe:  #F0BE86;
-    --white: #e2e3d2;
+    --background-secondary: #d9d9d9;
+    --background-primary: #fff;
+    --error: #AF3800;
+}
+
+@font-face {
+    font-family: jardiquest;
+    src: url('/static/fonts/FiraSans.ttf');
 }
 
 body {
-    background: var(--white);
+    background: var(--background-primary);
+}
+
+* {
+    margin: 0;
+    padding: 0;
+    font-family: jardiquest;
+    box-sizing: border-box;
+    color: var(--green);
+}
+
+hr {
+    border: 1px solid var(--green);
+    background: none;
+    box-shadow: none;
+    outline: none;
+}
+
+input {
+    color: var(--green);
+    font-size: large;
+}
+
+table {
+    border-spacing: 0 2px;
+}
+
+.notification {
+    padding: 5px;
+    margin: 5px;
+    text-align: center;
 }
