--- a/jardiquest/view/login.html
+++ b/jardiquest/view/login.html
@@ -1,21 +1,63 @@
-{% extends "base.html" %}
+{% extends "_base.html" %}
 {% block content %}
 <title>Se connecter</title>
-Connecter vous
-<form method="POST" action="/login">
-    <div class="field">
-        <div class="control">
-            <input class="input is-large" type="email" name="email" placeholder="Your Email" autofocus="">
+<link rel="stylesheet" href="/static/css/view/login.css">
+
+<div class="portal-container">
+    <div class="centered-element">
+        <div class="portal-rainbow"></div>
+        <div class="portal-content">
+            <div class="image-logo-container">
+                <img class="logo-jardiquest" src="/static/image/logo/jardiquest-logo-text.svg" alt="logo de jardi'quest">
+            </div>
+
+            <hr class="hr-separator">
+            {{callback}}
+            <form method="POST" action="/login{{callback}}" class="form-login">
+                <table>
+                    <tr>
+                        <td rowspan="2">
+                            <img class="field-icon" src="/static/image/icon/user-icon.png">
+                        </td>
+                        <td>
+                            <span>e-mail</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><input class="input" type="email" name="email" autofocus=""></td>
+                    </tr>
+                    <tr style="height: 20px"><td></td></tr>
+                    <tr>
+                        <td rowspan="2">
+                            <img class="field-icon" src="/static/image/icon/cadenas-icon.png">
+                        </td>
+                        <td>
+                            <span>mot de passe</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><input class="input" type="password" name="password"></td>
+                    </tr>
+                </table>
+
+                {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    <div class="notification-parent">
+                        <p class="notification error">{{ messages[0] }}</p>
+                    </div>
+                {% endif %}
+                {% endwith %}
+
+                <div class="footer-login">
+                    <a class="signup-a" href="{{ url_for('controller.signup') }}">Pas de compte ?</a>
+                    <input type="submit" class="submit" value="" />
+                </div>
+            </form>
         </div>
+
+        <div class="portal-rainbow invert-rainbow"></div>
     </div>
 
-    <div class="field">
-        <div class="control">
-            <input class="input is-large" type="password" name="password" placeholder="Your Password">
-        </div>
-    </div>
-
-    <button class="button is-block is-info is-large is-fullwidth">Login</button>
-</form>
+</div>
 
 {% endblock %}
