--- a/jardiquest/static/css/view/auth.css
+++ b/jardiquest/static/css/view/auth.css
@@ -27,7 +27,7 @@
     transform: scaleY(-1);
 }
 
-.form-login {
+.form-auth {
     display: block;
     align-self: center;
 }
@@ -102,7 +102,7 @@
     vertical-align: middle;
 }
 
-.footer-login {
+.footer-auth {
     margin-top: 5em;
 }
 
