--- a/jardiquest/view/signup.html
+++ b/jardiquest/view/signup.html
@@ -1,33 +1,79 @@
 {% extends "_base.html" %}
 {% block content %}
 <title>Inscrivez-vous</title>
-{% with messages = get_flashed_messages() %}
-{% if messages %}
-    <div class="notification is-danger">
-        {{ messages[0] }}. Go to <a href="{{ url_for('controller.login') }}">login page</a>.
-    </div>
-{% endif %}
-{% endwith %}
-<form method="POST" action="/signup">
-    <div class="field">
-        <div class="control">
-            <input class="input is-large" type="email" name="email" placeholder="Email" autofocus="">
+<link rel="stylesheet" href="/static/css/view/auth.css">
+
+
+<div class="portal-container">
+    <div class="centered-element">
+        <div class="portal-rainbow"></div>
+        <div class="portal-content">
+            <div class="image-logo-container">
+                <img class="logo-jardiquest" src="/static/image/logo/jardiquest-logo-text.svg" alt="logo de jardi'quest">
+            </div>
+
+            <hr class="hr-separator">
+
+            <form method="POST" action="/signup{{callback}}" class="form-auth">
+                <table>
+                    <tr>
+                        <td rowspan="2">
+                            <img class="field-icon" src="/static/image/icon/user-icon.png">
+                        </td>
+                        <td>
+                            <span>e-mail</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><input class="input" type="email" name="email" autofocus=""></td>
+                    </tr>
+
+                    <tr style="height: 20px"><td></td></tr>
+                    <tr>
+
+                        <td rowspan="2">
+                            <img class="field-icon" src="/static/image/icon/pen-icon.png">
+                        </td>
+                        <td>
+                            <span>nom</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><input class="input" type="text" name="name"></td>
+                    </tr>
+
+                    <tr style="height: 20px"><td></td></tr>
+
+                    <tr>
+                        <td rowspan="2">
+                            <img class="field-icon" src="/static/image/icon/cadenas-icon.png">
+                        </td>
+                        <td>
+                            <span>mot de passe</span>
+                        </td>
+                    </tr>
+                    <tr>
+                        <td><input class="input" type="password" name="password"></td>
+                    </tr>
+                </table>
+
+                {% with messages = get_flashed_messages() %}
+                {% if messages %}
+                    <div class="notification-parent">
+                        <p class="notification error">{{ messages[0] }}</p>
+                    </div>
+                {% endif %}
+                {% endwith %}
+
+                <div class="footer-auth">
+                    <a class="signup-a" href="/login{{callback}}">Déjà un compte ?</a>
+                    <input type="submit" class="submit" value="" />
+                </div>
+            </form>
         </div>
+
+        <div class="portal-rainbow invert-rainbow"></div>
     </div>
 
-    <div class="field">
-        <div class="control">
-            <input class="input is-large" type="text" name="name" placeholder="Name" autofocus="">
-        </div>
-    </div>
-
-    <div class="field">
-        <div class="control">
-            <input class="input is-large" type="password" name="password" placeholder="Password">
-        </div>
-    </div>
-
-    <button class="button is-block is-info is-large is-fullwidth">Sign Up</button>
-</form>
-
+</div>
 {% endblock %}
