--- a/jardiquest/view/home.html
+++ b/jardiquest/view/home.html
@@ -4,6 +4,6 @@
 
     <h2>Hello World</h2>
     <br> If you see that, it's mean all the links are good
-    <br> Test for the database link (maybe not working because data in it don't exist
+    <br> Test for the database link (maybe not working because data in it don't exist)
 
 {% endblock %}
