--- a/jardiquest/view/login.html
+++ b/jardiquest/view/login.html
@@ -24,7 +24,13 @@
                         </td>
                     </tr>
                     <tr>
-                        <td><input class="input" type="email" name="email" autofocus=""></td>
+                        <td>
+                            {% if email is not none %}
+                                <input class="input" type="text" name="email" autofocus="" value={{email}}>
+                            {% else %}
+                                <input class="input" type="text" name="email" autofocus="">
+                            {% endif %}
+                        </td>
                     </tr>
                     <tr style="height: 20px"><td></td></tr>
                     <tr>
