--- a/jardiquest/view/profile.html
+++ b/jardiquest/view/profile.html
@@ -1,6 +1,36 @@
 {% extends "_base.html" %}
+{% include "_navbar.html" %}
 {% block content %}
+
 <title>Profil</title>
-Welcome, {{ name }}!
+
+dfhuzfuzf$zf
+zf
+<br>
+zf
+fzf
+f
+zf<br>
+zf<br>
+zf<br>
+zf<br>
+zf<br>
+zf<br>
+zf<br>
+zf<br>
+zf<br>
+zf<br>
+zf<br>
+zf<br>
+zf<br>
+zf<br>
+zf<br>
+zf<br>
+zf<br>
+zf<br>
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+dh
+<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
+zff
 
 {% endblock %}
