--- a/jardiquest/view/_base.html
+++ b/jardiquest/view/_base.html
@@ -7,8 +7,8 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
-    <link rel="icon" type="image/x-icon" href="/static/image/logo/favicon.ico">
-    <link rel="stylesheet" href="/static/css/base.css">
+    <link rel="icon" type="image/x-icon" href="{{ url_for('static', filename='image/logo/favicon.ico') }}">
+    <link rel="stylesheet" href="{{ url_for('static', filename='css/base.css') }}">
 </head>
 <body>
     {% block content %}
