--- a/jardiquest/view/login.html
+++ b/jardiquest/view/login.html
@@ -1,14 +1,14 @@
 {% extends "_base.html" %}
 {% block content %}
 <title>Se connecter</title>
-<link rel="stylesheet" href="/static/css/view/auth.css">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/view/auth.css') }}">
 
 <div class="portal-container">
     <div class="centered-element">
         <div class="portal-rainbow"></div>
         <div class="portal-content">
             <div class="image-logo-container">
-                <img class="logo-jardiquest" src="/static/image/logo/jardiquest-logo-text.svg" alt="logo de jardi'quest">
+                <img class="logo-jardiquest" src="{{ url_for('static', filename='image/logo/jardiquest-logo-text.svg') }}" alt="logo de jardi'quest">
             </div>
 
             <hr class="hr-separator">
@@ -17,7 +17,7 @@
                 <table>
                     <tr>
                         <td rowspan="2">
-                            <img class="field-icon" src="/static/image/icon/user-icon.png">
+                            <img class="field-icon" src="{{ url_for('static', filename='image/icon/user-icon.png') }}">
                         </td>
                         <td>
                             <span>e-mail</span>
@@ -35,7 +35,7 @@
                     <tr style="height: 20px"><td></td></tr>
                     <tr>
                         <td rowspan="2">
-                            <img class="field-icon" src="/static/image/icon/cadenas-icon.png">
+                            <img class="field-icon" src="{{ url_for('static', filename='image/icon/cadenas-icon.png') }}">
                         </td>
                         <td>
                             <span>mot de passe</span>
