--- a/jardiquest/static/css/base.css
+++ b/jardiquest/static/css/base.css
@@ -6,6 +6,7 @@
     --brown-orange: #C18845;
     --taupe:  #F0BE86;
     --background-secondary: #d9d9d9;
+    --background-third: #d2d2d2;
     --background-primary: #fff;
     --error: #AF3800;
 }
