--- a/jardiquest/static/css/navbar.css
+++ b/jardiquest/static/css/navbar.css
@@ -1,38 +1,72 @@
 .topnav {
-  background-color: var(--background-secondary);
-  overflow: hidden;
-}
-
-.active {
-  color: var(--brown-orange);
-}
-
-.active:hover {
-  color: var(--brown-orange);
+    background-color: var(--background-third);
+    align-items: center;
+    overflow: hidden;
+    padding: 20px 20px 15px 20px;
+    text-align: center;
 }
 
 .topnav a {
-  float: left;
-  display: block;
-  text-align: center;
-  padding: 20px 16px;
-  text-decoration: none;
-  font-size: x-large;
+    margin: 0 18px;
+}
+
+.active {
+    color: var(--brown-orange);
+}
+
+.active:hover {
+    color: var(--brown-orange);
+}
+
+.topnav a {
+    text-align: center;
+    text-decoration: none;
+    font-size: x-large;
 }
 
 .topnav .icon {
-  display: none;
+    display: none;
 }
 
-.topnav > a:hover {
-  color: var(--taupe);
+.topnav > a:hover:not(.active) {
+    color: var(--taupe);
+}
+
+
+.new-line {
+    display: none;
+}
+
+.icon-user {
+    float: right;
+    padding: 0;
+    margin: 0;
+}
+
+.icon-user img {
+    width: 40px;
+    height: 40px;
 }
 
 .logo-jardiquest {
-  background-image: url("/static/image/logo/jardiquest-logo.svg");
-  display: block;
-  height: 50px;
-  width: 50px;
+    float: left;
+    padding: 0;
+    margin: 0;
+}
+
+.logo-jardiquest img {
+    width: 40px;
+    height: 40px;
+}
+
+.icon img {
+    width: 40px;
+    height: 40px;
+}
+
+.icon {
+    padding: 0;
+    margin: 0;
 }
 
 .portal-rainbow {
@@ -42,7 +76,7 @@
 }
 
 .icon:hover {
-  cursor: pointer;
+    cursor: pointer;
 }
 
 .invert-rainbow {
@@ -52,34 +86,48 @@
     transform: scaleY(-1);
 }
 
-@media screen and (max-width: 600px) {
-  .topnav a:not(.active) {
-    display: none;
-  }
-  .topnav a.icon {
-    float: right;
-    display: block;
-  }
+@media screen and (max-width: 650px) {
+    .topnav a:not(.icon):not(.not-responsive) {
+        display: none;
+    }
+    .topnav a.icon {
+        display: inline;
+    }
 }
 
-@media screen and (max-width: 600px) {
-  .topnav.responsive {position: relative;}
-  .topnav.responsive a.icon {
-    position: absolute;
-    right: 0;
-    top: 0;
-  }
-  .topnav.responsive a {
-    float: none;
-    display: block;
-    text-align: left;
-    border-bottom: 1px solid var(--green);
-  }
-  .topnav.responsive {float: none;}
-  .topnav.responsive {position: relative;}
-  .topnav.responsive {
-    display: block;
-    width: 100%;
-    text-align: left;
-  }
+@media screen and (max-width: 650px) {
+    .topnav.responsive {
+        position: relative;
+        padding: 0;
+    }
+    .topnav.responsive .icon,
+    .topnav.responsive .not-responsive {
+        border: none;
+    }
+    .topnav.responsive .active {
+        display: none;
+    }
+    .topnav.responsive .new-line {
+        display: block;
+        height: 60px;
+    }
+    .topnav.responsive a {
+        display: block;
+        padding: 10px 5px;
+        margin: 0;
+        border-bottom: 1px solid var(--green);
+    }
+    .topnav.responsive {float: none;}
+    .topnav.responsive {position: relative;}
+    .topnav.responsive {
+        display: block;
+        width: 100%;
+        text-align: left;
+    }
+}
+
+@media screen and (max-width: 280px) {
+    .topnav .not-responsive {
+        display: none;
+    }
 }
