--- a/jardiquest/view/_navbar.html
+++ b/jardiquest/view/_navbar.html
@@ -1,24 +1,73 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='css/navbar.css') }}">
 
 <div class="topnav" id="topnav">
+
+    <!-- set active to one of this value to set the position of your page
+    ('user', 'garden', 'quests', 'blog', 'market', 'handlegarden')
+    if you want to display the handle_garden part you need to
+    set owner = 1
+    -->
+
     <a href="/" class="logo-jardiquest not-responsive">
-        <img src="/static/image/logo/jardiquest-logo.svg">
-    </a>
-        <a onclick="displayMenu()" class="icon">
-        <img src="/static/image/icon/menu-icon.png">
+        <img src="{{ url_for('static', filename='image/logo/jardiquest-logo.svg') }}">
     </a>
     <a href="/profile" class="icon-user not-responsive">
-        <img src="/static/image/icon/user-icon.png">
+        {% if active == 'user' %}
+            <img src="{{ url_for('static', filename='image/icon/user-icon-active.png') }}">
+        {% else %}
+            <img src="{{ url_for('static', filename='image/icon/user-icon.png') }}">
+        {% endif %}
     </a>
-    <a class="new-line"></a>
-    <a href="#home">Jardin</a>
-    <a href="#news" class="active">Quêtes</a>
-    <a href="#about">Blog</a>
-    <a href="#about">Marché</a>
+        <a onclick="displayMenu()" class="icon">
+        <img src="{{ url_for('static', filename='image/icon/menu-icon.png') }}" id="icon" onclick="displayMenu()">
+    </a>
+
+    {% if active == 'garden' %}
+        <a href="#garden" class="active">Jardin</a>
+    {% else %}
+        <a href="#garden">Jardin</a>
+    {% endif %}
+
+    {% if active == 'quests' %}
+        <a href="#quests" class="active">Quêtes</a>
+    {% else %}
+        <a href="#quests">Quêtes</a>
+    {% endif %}
+
+    {% if active == 'blog' %}
+        <a href="#blog" class="active">Blog</a>
+    {% else %}
+        <a href="#blog">Blog</a>
+    {% endif %}
+
+    {% if active == 'market' %}
+        <a href="#market" class="active">Marché</a>
+    {% else %}
+        <a href="#market">Marché</a>
+    {% endif %}
+
+    {% if owner == 1 %}
+        {% if active == 'handlegarden' %}
+            <a href="#handlegarden" class="active">Gérer jardin</a>
+        {% else %}
+            <a href="#handlegarden">Gérer jardin</a>
+        {% endif %}
+    {% endif %}
+
 </div>
 <div class="portal-rainbow invert-rainbow"></div>
 
 <script>
+    window.onload = function(){
+            document.onclick = function(e){
+               if(e.target.id !== 'navbar' && e.target.id !== 'icon' && window.innerWidth <= 650 ) {
+                  document.getElementById("topnav").className = "topnav"
+               }
+               else if (e.target.id === 'icon') {
+                    displayMenu()
+               }
+            };
+         };
     function displayMenu() {
         let x = document.getElementById("topnav");
         if (x.className === "topnav") {
