--- a/jardiquest/view/profile.html
+++ b/jardiquest/view/profile.html
@@ -1,4 +1,5 @@
 {% extends "_base.html" %}
+{% set active='user' %}
 {% include "_navbar.html" %}
 {% block content %}
 
@@ -10,6 +11,7 @@ zf
 zf
 fzf
 f
+<button onclick="displayMenu()">zfjifhjuzfs</button>
 zf<br>
 zf<br>
 zf<br>
