--- a/jardiquest/view/profile.html
+++ b/jardiquest/view/profile.html
@@ -10,41 +10,52 @@
     <div class="centered-element">
         <div class="align-user-icon">
             <img src="{{ url_for('static', filename='image/icon/user-icon.png') }}" class="display-user">
+            <br>
+            <span class="display-name">{{ user.name }}<span>
         </div>
         <hr class="litle-hr">
 
-        <div class="handler-display-data">
-            <div>
+        {% with messages = get_flashed_messages() %}
+            {% if messages %}
+                <div class="notification-parent">
+                    <p class="notification error">{{ messages[0] }}</p>
+                </div>
+            {% endif %}
+        {% endwith %}
+
+        <div>
+            <form action="/account" method="post" class="handler-display-data" id="update-account">
+                <input type="hidden" name="_method" value="put"/>
+                <div>
                 <b>E-mail</b> <br>
-                <input class="input" type="text" name="email" autofocus="" value="{{user.email}}">
-            </div>
-            <div>
-                <b>Nom</b> <br>
-                <input class="input" type="text" name="email" autofocus="" value="{{user.name}}">
-            </div>
-            <div>
-                <b>Nouveau mot de passe</b> <br>
-                <input class="input" type="password" name="new_password">
-            </div>
-            <div>
-                <b>Rôle</b> <br>
-                <span>{{ user.role}}</span>
-            </div>
-            <div>
-                <b>Balance</b> <br>
-                <span>{{ user.balance }}</span>
-            </div>
-            <div>
-                <b>Date d'inscription</b> <br>
-                <span>{{ user.recruitmentDate.strftime('%d-%m-%Y') }}</span>
-            </div>
+                    <span>{{user.email}}</span>
+                </div>
+                <div>
+                    <b>Nom</b> <br>
+                    <input class="input" type="text" name="name" autofocus="" value="{{user.name}}">
+                </div>
+                <div>
+                    <b>Nouveau mot de passe</b> <br>
+                    <input class="input" type="password" name="new_password" value="">
+                </div>
+                <div>
+                    <b>Rôle</b> <br>
+                    <span>{{ user.role}}</span>
+                </div>
+                <div>
+                    <b>Balance</b> <br>
+                    <span>{{ user.balance }}</span>
+                </div>
+                <div>
+                    <b>Date d'inscription</b> <br>
+                    <span>{{ user.recruitmentDate.strftime('%d-%m-%Y') }}</span>
+                </div>
+            </form>
+
         </div>
         <div class="button-panel">
 
-             <form action="account" method="post">
-                 <input type="hidden" name="_method" value="put"/>
-                <button class="green">Sauvegarder</button>
-             </form>
+            <button class="green" onclick="updateAccount()">Sauvegarder</button>
 
             <form action="logout" method="post">
                 <button class="red">Déconnexion</button>
@@ -64,6 +75,9 @@
         if (confirm("Voulez vous vraiment supprimer votre compte ?")) {
             document.getElementById("delete-form").submit()
         }
+    }
+    function updateAccount() {
+        document.getElementById("update-account").submit()
     }
 </script>
 
