add:gestion de jardin v1

--- a/jardiquest/view/_navbar.html
+++ b/jardiquest/view/_navbar.html
@@ -48,9 +48,9 @@
 
     {% if owner == 1 %}
         {% if active == 'handlegarden' %}
-            <a href="#handlegarden" class="active">Gérer jardin</a>
+            <a href='/handle_garden' class="active">Gérer jardin</a>
         {% else %}
-            <a href="#handlegarden">Gérer jardin</a>
+            <a href='/handle_garden' >Gérer jardin</a>
         {% endif %}
     {% endif %}
 
