--- a/jardiquest/view/profile.html
+++ b/jardiquest/view/profile.html
@@ -1,5 +1,8 @@
 {% extends "_base.html" %}
 {% set active='user' %}
+{% if user.role =='Gerant' %}
+    {% set owner=1 %}
+{% endif %}
 {% include "_navbar.html" %}
 {% block content %}
 
@@ -40,7 +43,7 @@
                 </div>
                 <div>
                     <b>Rôle</b> <br>
-                    <span>{{ user.role}}</span>
+                    <span>{{user.role}}</span>
                 </div>
                 <div>
                     <b>Balance</b> <br>
