--- a/jardiquest/view/handle_garden.html
+++ b/jardiquest/view/handle_garden.html
@@ -6,12 +6,89 @@
 {% include "_navbar.html" %}
 {% block content %}
 
-<h1>Votre Jardin</h1>
-{% if notexist %}
-    <p>Erreur : Vous ne gérer aucun jardin. Comment êtes-vous arrivé ici ?</p>
-{% endif %}
-<ol>
-    <li>{{jardin.idJardin}} </li>
-    <li>{{jardin.name}} </li>
-</ol>
+<title>Profil</title>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/view/profile.css') }}">
+<link rel="stylesheet" href="{{ url_for('static', filename='css/view/handle_garden.css') }}">
+
+
+<div class="portal-container">
+    <div class="centered-element">
+        <div class="align-user-icon">
+            <br>
+            <span class="display-name">Votre Jardin<span>
+        </div>
+        <hr class="litle-hr">
+        {% if notexist %}
+            <p>Erreur : Vous ne gérer aucun jardin. Comment êtes-vous arrivé ici ?</p>
+        {% else %}
+            <div>
+                <form action="/handle_garden" method="post" class="handler-display-data" id="update-garden">
+                    <input type="hidden" name="_method" value="put"/>
+                    <div>
+                        <b>Identifiant du jardin</b> <br>
+                        <span>{{jardin.idJardin}}</span>
+                    </div>
+                    <div>
+                        <b>Nom</b> <br>
+                        <input class="input" type="text" name="name" autofocus="" value="{{jardin.name}}">
+                    </div>
+
+                    <div>
+                        <b>Nom de la monnaie</b> <br>
+                        <input class="input" type="text" name="name" autofocus="" value="{{jardin.moneyName}}">
+                    </div>
+                    <div>
+                        <b>Participants</b> <br>
+                        <table class="table_participating">
+                            <!-- Table headers -->
+                            <thead>
+                                <tr>
+                                    <th><b>Nom</b></th>
+                                    <th><b>Balance</b></th>
+                                    <th><b>Date de Recrutement</b></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+
+                            {% for p in participant %}
+
+                                <tr>
+                                    <td>{{p.name}}</td>
+                                    <td>{{p.balance}}</td>
+                                    <td>{{p.recruitmentDate}}</td>
+                                
+                                </tr>
+    
+                            {%endfor%}
+    
+                            </tbody>
+                        </table>
+                    </div>
+                </form>
+
+            </div>
+            <div class="button-panel">
+
+                <button class="green" onclick="updateGarden()">Sauvegarder</button>
+                
+                
+                <button class="red" onclick="deleteGarden()">Supprimer le Jardin</button>
+                <form action="garden" method="post" id="delete-garden">
+                    <input type="hidden" name="_method" value="delete" />
+                </form>
+
+            </div>
+        {% endif %}
+    </div>
+</div>
+<script>
+    function deleteGarden() {
+        if (confirm("Voulez vous vraiment supprimer votre compte ?")) {
+            document.getElementById("delete-garden").submit()
+        }
+    }
+    function deleteGarden() {
+        document.getElementById("update-garden").submit()
+    }
+</script>
 {% endblock %}
