--- a/jardiquest/view/_navbar.html
+++ b/jardiquest/view/_navbar.html
@@ -29,9 +29,9 @@
     {% endif %}
 
     {% if active == 'quests' %}
-        <a href="#quests" class="active">Quêtes</a>
+        <a href="/garden/quests" class="active">Quêtes</a>
     {% else %}
-        <a href="#quests">Quêtes</a>
+        <a href="/garden/quests">Quêtes</a>
     {% endif %}
 
     {% if active == 'blog' %}
