--- a/jardiquest/static/css/view/quests/quests_list.css
+++ b/jardiquest/static/css/view/quests/quests_list.css
@@ -1,7 +1,11 @@
-h2{
+.quest_button{
     margin-left:2%;
     margin-top: 10px;
     margin-bottom: 10px;
+    border: none;
+    font-size: 1.5em;
+    display: inline-block;
+    background-color: transparent;
 }
 
 .quests_container{
@@ -13,45 +17,25 @@ h2{
 
 .quest{
     display : grid;
+    column-gap: 8px;
     border : 1px solid black;
     border-radius : 5px;
     box-shadow: 1px 1px 1px black;
     align-self: center;
-    grid-template-columns: 1fr 4fr 1fr;
     min-height: 50px;
     width : 80%;
 }
 
-.time_left{
-    padding-left: 2%;
-    grid-column: 1;
-}
-
 .quest_title{
     color:black;
-    font-size: 20px;
-    grid-column: 2;
-    grid-row: 1;
-    
+    font-size: 20px;    
 }
 
 .quest_title a{
     color:black;
-    text-decoration : none;
-}
-
-.estimated_time{
-    grid-column: 2;
-    grid-row: 2;
 }
 
 .estimated_time p{
     color:grey;
     font-size: 13px;
-}
-
-.reward{
-    grid-column: 3;
-    justify-self: end;
-    padding-right: 2%;
 }
