--- a/jardiquest/static/css/view/new_garden.css
+++ b/jardiquest/static/css/view/new_garden.css
@@ -1,116 +1,33 @@
 .portal-container {
     align-self: center;
-    margin: 6% auto auto;
+    margin: auto auto;
     width: 100vw;
-    display: flex;
     padding: 2em 10%;
 }
 
-.centered-element {
-    margin: auto;
-    width: 100%;
-    height: fit-content;
+.container{
     background-color: var(--background-secondary);
 }
 
-.input {
-    background: transparent;
-    border: none;
-    border-bottom: 2px solid var(--green);
-}
-
-.input:focus {
-    outline: 1px dotted var(--green);
-}
-
-.right{
-    grid-column: 2;
-}
-
-.left{
-    grid-column: 1;
-}
-
-.middle{
-    grid-row: 2;
-}
-
-.top{
-    grid-row: 1;
-}
-
-.bottom{
-    grid-row: 3;
-}
-
-.handler-display-data {
-    display: grid;
-    grid-template-columns: 1fr 1fr;
-    grid-template-rows: 60px 60px 60px;
-}
-
-.handler-display-data > div {
-    margin: 0.8em;
-    font-size: large;
-    box-sizing: border-box;
-}
-
-.handler-display-data div b {
-    color: var(--brown-orange);
-}
-
-.button-panel {
-    margin: 2em 0;
+form {
     display: flex;
-    flex-basis: 33%;
-    justify-content: center;
-    flex-wrap: wrap;
+    flex-flow: column wrap;
+    align-items: center;
 }
 
-.button-panel > button {
-    padding: 0.6em;
-    margin: 0.2em 1em;
-    font-size: x-large;
-    cursor: pointer;
-    border: 1px solid var(--background-third);
-    color: var(--background-secondary);
-    border-radius: 9px;
+form label {
+    margin: 5px 10px 5px 0;
 }
 
-.green {
-    background: var(--green);
+form input {
+    margin: 5px 10px 5px 0;
+    padding: 10px;
 }
 
-.red {
-    background: var(--error);
+button{
+    margin: 5px 10px 5px 0;
+    padding: 10px;
+    margin: 5px 10px 5px 0;
 }
 
-.error {
-    color: var(--error);
-    font-size: large;
-    align-self: center;
-    text-align: center;
-}
-
-.display-name {
-    font-size: xx-large;
-    text-align: center;
-    margin: 0.5em 0;
-}
-
-.notification-parent {
-    position: relative;
-    align-self: center;
-    justify-content: center;
-    margin: auto;
-}
-
-@media only screen and (max-width: 800px) {
-    .handler-display-data {
-        display: flex;
-        margin: auto;
-        flex-direction: column;
-        justify-content: center;
-        text-align: center;
-}
-}
+a:link { text-decoration: none; }
