--- a/jardiquest/static/css/view/quests/quests_list.css
+++ b/jardiquest/static/css/view/quests/quests_list.css
@@ -44,10 +44,17 @@
 .quest_title{
     color:black;
     font-size: 20px;    
+    grid-column: 2;
+    grid-row: 1;
 }
 
 .quest_title a{
     color:black;
+}
+
+.estimated_time{
+    grid-column: 2;
+    grid-row: 2;
 }
 
 .estimated_time p{
@@ -56,6 +63,22 @@
 }
 
 
+.quest{
+    grid-template-columns: 1fr 4fr 1fr;
+}
 
+.time_left{
+    padding-left: 2%;
+    grid-column: 1;
+    grid-row: 1/3;
+    border-right: 2px solid black;
+}
 
-
+.reward{
+    width : 100%;
+    grid-row: 1/3;
+    grid-column: 3;
+    text-align: end;
+    padding-right: 5%;
+    border-left: 2px solid black;
+}
