--- a/jardiquest/view/quest_details.html
+++ b/jardiquest/view/quest_details.html
@@ -23,8 +23,9 @@
                 {% set hours = quest.estimatedTime//60 %}
         
                 <p>
+                    Temps estimé :
                     {% if hours > 0 %}
-                        Temps estimé : {{ hours }}h
+                        {{ hours }}h
                     {% endif %}
                     {{ minutes }}min
                 </p>
@@ -43,12 +44,26 @@
         <p>Vous recevrez : {{ quest.reward }} {{ garden.moneyName }}</p>
     </div>
 
-    <input type="button" id="button_accept_quest" value="Accepter la quête">
+    {% if user %}
+        <div id="buttons_quest">
+            
+            {% if quest.id_user == user %}
+                <form action="{{ url_for('controller.cancel_quest', quest_id = quest.idQuete) }}" method="post">
+                    <input type="hidden" name="quest_id" value="{{quest.idQuete}}"/>
+                    <input name="cancel" type="submit" id="button_cancel_quest" value="Abandonner la quête"/>
+                </form>
+                <form action="{{ url_for('controller.complete_quest', quest_id = quest.idQuete) }}" method="post">
+                    <input type="hidden" name="quest_id" value="{{quest.idQuete}}"/>
+                    <input name="complete" type="submit" id="button_finish_quest" value="Finir la quête"/>
+                </form>
+
+            {% elif quest.id_user == None %}
+                <form action="{{ url_for('controller.accept_quest', quest_id = quest.idQuete) }}" method="post">
+                    <input type="hidden" name="quest_id" value="{{quest.idQuete}}"/>
+                    <input name="accept" type="submit" id="button_accept_quest" value="Accepter la quête"/>
+                </form>
+            {% endif %}
+        </div>
+    {% endif %}
 </div>
-
-
-
-
-
-
 {% endblock %}
