--- a/jardiquest/view/quests_list.html
+++ b/jardiquest/view/quests_list.html
@@ -21,7 +21,33 @@
         {% for quest in quests %}    
             {% set url = url_for('controller.display_quest', quest_id=quest.idQuete) %} 
             <div class="quest" style="cursor: pointer;" onclick="window.location='{{url}}';"> 
-                {% block quest scoped required %}{% endblock %}    
+                <div class="quest_title">
+                    {{ quest.title }}
+                </div>  
+                <div class="time_left">
+                        {% set timeLeft = quest.timeBeforeExpiration - (today - quest.startingDate).days %}
+                        <p>Temps restant : {{ timeLeft }} {% if timeLeft > 1 %} jours {% else %} jour {% endif %}</p>
+                </div> 
+
+                <div class="estimated_time">
+                    {% if quest.estimatedTime %}
+                        {% set minutes = quest.estimatedTime%60 %}
+                        {% set hours = quest.estimatedTime//60 %}
+
+                        
+                            <p>
+                                {% if hours > 0 %}
+                                    Temps estimé : {{ hours }}h
+                                {% endif %}
+                                {{ minutes }}min
+                            </p>
+                        
+                    {% endif %}
+                </div>
+
+                <div class="reward">
+                    <p>{{ quest.reward }} {{ garden.moneyName }}</p>
+                </div>
             </div>
         {% endfor %}
         </div>
