color on the navbar for quests

--- a/jardiquest/view/quest_details.html
+++ b/jardiquest/view/quest_details.html
@@ -1,7 +1,9 @@
 {% extends "_base.html" %}
 {% block content %}
 
+{% set active="quests" %}
 {% include "_navbar.html" %}
+
 
 <link rel="stylesheet" href="{{ url_for('static', filename='css/view/quests/quest_details.css') }}">
 
